--- a/.classpath
+++ b/.classpath
@@ -25,24 +25,12 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="drivers"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
+	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="D:/Hossam/Automation/reports/bson-3.0.4.jar"/>
-	<classpathentry kind="lib" path="D:/Hossam/Automation/reports/extentreports-2.41.2.jar"/>
-	<classpathentry kind="lib" path="D:/Hossam/Automation/reports/freemarker-2.3.23.jar"/>
-	<classpathentry kind="lib" path="D:/Hossam/Automation/reports/jsoup-1.8.3.jar"/>
-	<classpathentry kind="lib" path="D:/Hossam/Automation/reports/mongodb-driver-3.0.4.jar"/>
-	<classpathentry kind="lib" path="D:/Hossam/Automation/reports/mongodb-driver-core-3.0.4.jar"/>
-	<classpathentry kind="lib" path="D:/Hossam/Automation/reports/org.apache.commons.io.jar"/>
-	<classpathentry kind="lib" path="D:/Hossam/Automation/reports/screenshot-1.0.jar"/>
-	<classpathentry kind="lib" path="D:/Hossam/Automation/reports/sqlite-jdbc-3.8.11.1.jar"/>
+	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
