--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
     <scope>test</scope>
 </dependency>
 
+<dependency>
+   <groupId>mysql</groupId>
+   <artifactId>mysql-connector-java</artifactId>
+   <version>5.1.38</version>
+</dependency>
   
   
   <dependency>
