--- a/.classpath
+++ b/.classpath
@@ -25,16 +25,25 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="drivers"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="D:/git/CatsAuto/ThirdParty/bson-3.0.4.jar"/>
+	<classpathentry kind="lib" path="D:/git/CatsAuto/ThirdParty/extentreports-2.41.2.jar"/>
+	<classpathentry kind="lib" path="D:/git/CatsAuto/ThirdParty/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="D:/git/CatsAuto/ThirdParty/jsoup-1.8.3.jar"/>
+	<classpathentry kind="lib" path="D:/git/CatsAuto/ThirdParty/mongodb-driver-3.0.4.jar"/>
+	<classpathentry kind="lib" path="D:/git/CatsAuto/ThirdParty/mongodb-driver-core-3.0.4.jar"/>
+	<classpathentry kind="lib" path="D:/git/CatsAuto/ThirdParty/org.apache.commons.io.jar"/>
+	<classpathentry kind="lib" path="D:/git/CatsAuto/ThirdParty/screenshot-1.0.jar"/>
+	<classpathentry kind="lib" path="D:/git/CatsAuto/ThirdParty/sqlite-jdbc-3.8.11.1.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
