--- a/.classpath
+++ b/.classpath
@@ -31,10 +31,15 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="D:/Local/Git/CatsAuto/ThirdParty/bson-3.0.4.jar"/>
+	<classpathentry kind="lib" path="D:/Local/Git/CatsAuto/ThirdParty/extentreports-2.41.2.jar"/>
+	<classpathentry kind="lib" path="D:/Local/Git/CatsAuto/ThirdParty/freemarker-2.3.23.jar"/>
+	<classpathentry kind="lib" path="D:/Local/Git/CatsAuto/ThirdParty/jsoup-1.8.3.jar"/>
+	<classpathentry kind="lib" path="D:/Local/Git/CatsAuto/ThirdParty/mongodb-driver-3.0.4.jar"/>
+	<classpathentry kind="lib" path="D:/Local/Git/CatsAuto/ThirdParty/mongodb-driver-core-3.0.4.jar"/>
+	<classpathentry kind="lib" path="D:/Local/Git/CatsAuto/ThirdParty/org.apache.commons.io.jar"/>
+	<classpathentry kind="lib" path="D:/Local/Git/CatsAuto/ThirdParty/screenshot-1.0.jar"/>
+	<classpathentry kind="lib" path="D:/Local/Git/CatsAuto/ThirdParty/sqlite-jdbc-3.8.11.1.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-18.0.2"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
